# fair-credit-risk-lab

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature.md
demo/: index.html
docs/: architecture.md  demo.md  model-card-template.md
sample_data/: credit_demo.csv
sample_outputs/: fairness_report.json
src/fair_credit/: __init__.py  app.py  metrics.py  modeling.py
tests/: test_metrics.py
